--- a/Pinjector/Pinjector.vcxproj
+++ b/Pinjector/Pinjector.vcxproj
@@ -20,19 +20,21 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{B4AD3661-3541-4439-91CB-9B99656C9585}</ProjectGuid>
-    <RootNamespace>Process</RootNamespace>
+    <ProjectGuid>{B98CEFBF-BE57-445E-A8D1-24C8A32DE169}</ProjectGuid>
+    <Keyword>Win32Proj</Keyword>
+    <RootNamespace>Pinjector</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Pinjectra</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -69,6 +71,9 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <LinkIncremental>false</LinkIncremental>
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
@@ -78,16 +83,34 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <LinkIncremental>false</LinkIncremental>
-  </PropertyGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <ClCompile>
+      <PrecompiledHeader>
+      </PrecompiledHeader>
+      <WarningLevel>Level3</WarningLevel>
+      <Optimization>MaxSpeed</Optimization>
+      <FunctionLevelLinking>true</FunctionLevelLinking>
+      <IntrinsicFunctions>true</IntrinsicFunctions>
+      <SDLCheck>true</SDLCheck>
+      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <ConformanceMode>true</ConformanceMode>
+    </ClCompile>
+    <Link>
+      <SubSystem>Console</SubSystem>
+      <EnableCOMDATFolding>true</EnableCOMDATFolding>
+      <OptimizeReferences>true</OptimizeReferences>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
+    </Link>
+  </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
+      <PrecompiledHeader>
+      </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
+      <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -96,7 +119,10 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
+      <PrecompiledHeader>
+      </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
+      <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
@@ -108,28 +134,14 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
+      <PrecompiledHeader>
+      </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
+      <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpplatest</LanguageStandard>
-    </ClCompile>
-    <Link>
-      <SubSystem>Console</SubSystem>
-      <EnableCOMDATFolding>true</EnableCOMDATFolding>
-      <OptimizeReferences>true</OptimizeReferences>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
-    </Link>
-  </ItemDefinitionGroup>
-  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <ClCompile>
-      <WarningLevel>Level3</WarningLevel>
-      <FunctionLevelLinking>true</FunctionLevelLinking>
-      <IntrinsicFunctions>true</IntrinsicFunctions>
-      <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
@@ -140,10 +152,55 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Process.cpp" />
+    <ClCompile Include="Adapters.cpp" />
+    <ClCompile Include="ALPC.cpp" />
+    <ClCompile Include="CFMA_MVOF_NUVOS_NMVOS.cpp" />
+    <ClCompile Include="CtrlInject.cpp" />
+    <ClCompile Include="DynamicPayloads.cpp" />
+    <ClCompile Include="GhostWriting.cpp" />
+    <ClCompile Include="misc.c" />
+    <ClCompile Include="NQAT_WITH_MEMSET.cpp" />
+    <ClCompile Include="PROPagate.cpp" />
+    <ClCompile Include="QueueUserAPC.cpp" />
+    <ClCompile Include="CFMA_MVOF_OP_PNMVOS.cpp" />
+    <ClCompile Include="memmem.c" />
+    <ClCompile Include="OT_OP_VAE_GAAA.cpp" />
+    <ClCompile Include="SetWindowLongPtrA.cpp" />
+    <ClCompile Include="StaticPayloads.c" />
+    <ClCompile Include="SIR.cpp" />
+    <ClCompile Include="LLA_GPA.cpp" />
+    <ClCompile Include="CreateRemoteThread.cpp" />
+    <ClCompile Include="OP_VAE_WPM.cpp" />
+    <ClCompile Include="PinjectraDemo.cpp" />
+    <ClCompile Include="VAE_WPM.cpp" />
+    <ClCompile Include="WindowsHook.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Process.h" />
+    <ClInclude Include="ALPC.h" />
+    <ClInclude Include="CFMA_MVOF_NUVOS_NMVOS.h" />
+    <ClInclude Include="CtrlInject.h" />
+    <ClInclude Include="DynamicPayloads.h" />
+    <ClInclude Include="GhostWriting.h" />
+    <ClInclude Include="misc.h" />
+    <ClInclude Include="NQAT_WITH_MEMSET.h" />
+    <ClInclude Include="ntapi.h" />
+    <ClInclude Include="PinjectraPacket.h" />
+    <ClInclude Include="PROPagate.h" />
+    <ClInclude Include="QueueUserAPC.h" />
+    <ClInclude Include="CFMA_MVOF_OP_PNMVOS.h" />
+    <ClInclude Include="memmem.h" />
+    <ClInclude Include="OT_OP_VAE_GAAA.h" />
+    <ClInclude Include="SetWindowLongPtrA.h" />
+    <ClInclude Include="StaticPayloads.h" />
+    <ClInclude Include="SIR.h" />
+    <ClInclude Include="ExecutionTechnique.h" />
+    <ClInclude Include="HookProcProvider.h" />
+    <ClInclude Include="LLA_GPA.h" />
+    <ClInclude Include="CreateRemoteThread.h" />
+    <ClInclude Include="OP_VAE_WPM.h" />
+    <ClInclude Include="VAE_WPM.h" />
+    <ClInclude Include="WritingTechniques.h" />
+    <ClInclude Include="WindowsHook.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
